--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,10 @@ services:
         target: /go/pkg/mod
     environment:
       PORT: 8081
+      AUTH0_DOMAIN: ${AUTH0_DOMAIN}
+      AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
+      AUTH0_CLIENT_SECRET: ${AUTH0_CLIENT_SECRET}
+      SENDGRID_API_KEY: ${SENDGRID_API_KEY}
 
 volumes:
   go_modules:
